Ajout de la documentation des routes d'équipement
